CRUD operation for Points
